# teleprompter

./: .cwconfig.json  .cwshare  .editorconfig  .gitignore  .mcp.json  .swift-format  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IN_PROGRESS.md  LICENSE  PRD.md  README.md  TODO.md  biome.json  bunfig.toml  docker-compose.yml  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  tsconfig.json  turbo.json  vercel.json
.claude/: settings.json
.claude/agents/: app-ios-qa.md  app-mobile-qa.md  app-web-qa.md  frontend-qa.md
.claude/commands/: deploy-check.md  qa.md  release.md  test.md  verify-native.md
.claude/hooks/: block-force-push.sh  block-no-verify.sh  validate-qa-result.sh  warn-version-edit.sh
.claude/rules/: app-frontend.md  backend-services.md  ci-workflows.md  dogfooding.md  e2e-tests.md  native-build.md  native-testing.md  protocol.md  relay-capacity.md  release-deploy.md  testing-inventory.md  workflow-authoring.md
.claude/workflows/: fact-grounded-fix.js  full-cli-port-scope.js  stage1-step2-tp-relay-core.js  (+8 more)
.github/: CODEOWNERS  dependabot.yml
docs/: FAQ.md  GETTING-STARTED.md  PUSH-NOTIFICATION-TEST.md  local-verification-queue.md  native-parity-audit-2026-06.md  native-phase3-plan.md  native-phase3x-milestone-sequence.md  native-terminal-plan.md  testflight-setup.md
e2e/: app-add-daemon-glyph-aria-hidden.spec.ts  app-add-daemon-haspopup.spec.ts  app-api-key-modal-describedby.spec.ts  app-api-key-modal.spec.ts  app-api-key-save-tab-reachable.spec.ts  app-aria-disabled.spec.ts  app-aria-level.spec.ts  app-chat-bubble-keyboard-copy.spec.ts  app-chat-bubble-role.spec.ts  app-chat-bubble-space-activate.spec.ts  app-chat-card-alert-no-polite.spec.ts  app-chat-enter.spec.ts  app-chat-ime-composition.spec.ts  app-chat-input-autogrow.spec.ts  app-chat-link-aria-label.spec.ts  app-chat-list-ownership.spec.ts  app-chat-log-aria-label.spec.ts  app-chat-log-aria-live.spec.ts  app-chat-markdown-list-marker-aria-hidden.spec.ts  app-chat-markdown-list-role.spec.ts  app-chat-resume-dedup.spec.ts  app-chat-roundtrip.spec.ts  app-chat-send-glyph-aria-hidden.spec.ts  app-chat-send-tab-reachable.spec.ts  app-chat-send-unpaired.spec.ts  app-confirm-unpair-describedby.spec.ts  app-connection-live-region-atomic.spec.ts  app-daemon-card-a11y.spec.ts  app-daemon-card-decorative-aria-hidden.spec.ts  app-daemon.spec.ts  app-daemons-empty.spec.ts  app-daemons-list-ownership.spec.ts  app-diagnostics-a11y.spec.ts  app-diagnostics-aria-controls.spec.ts  app-diagnostics-aria-expanded.spec.ts  app-diagnostics-heading-hierarchy.spec.ts  app-diagnostics-live-region-atomic.spec.ts  app-diagnostics-main-landmark.spec.ts  app-diagnostics-rtt-announce.spec.ts  app-diagnostics-selftest-announce.spec.ts  (+133 more)
ios/: .gitignore  ExportOptions.macos.plist  ExportOptions.plist  ExportOptions.visionos.plist  ExportOptions.watchos.plist  README.md  Teleprompter-macOS.entitlements  Teleprompter.entitlements  project.yml
patches/: react-native-audio-api.patch
rust/: .gitignore  Cargo.toml  README.md  build-xcframework.sh  rust-toolchain.toml  rustfmt.toml
rust/tp-cli/: Cargo.toml  build.rs
rust/tp-cli/src/: codec.rs  colors.rs  config_dir.rs  ensure_daemon.rs  format.rs  ipc_client.rs  ipc_session.rs  locate.rs  main.rs  osc52.rs  pair_lock.rs  qr.rs  service_darwin.rs  service_linux.rs  socket.rs  store.rs  util.rs
rust/tp-cli/src/commands/: completions.rs  completions_install.rs  daemon.rs  doctor.rs  forward.rs  forward_claude.rs  logs.rs  mod.rs  pair.rs  passthrough.rs  passthrough_split.rs  relay.rs  run.rs  session.rs  status.rs  upgrade.rs  version.rs
rust/tp-cli/src/tui/: mod.rs  raw_mode.rs
rust/tp-core/: Cargo.toml
rust/tp-core/src/: codec.rs  crypto.rs  error.rs  lib.rs  pairing.rs
rust/tp-core/tests/: wire_vectors.rs
rust/tp-core/tests/fixtures/: wire-vectors.json
rust/tp-daemon/: Cargo.toml
rust/tp-daemon/src/: daemon.rs  daemon_lock.rs  export_formatter.rs  lib.rs
rust/tp-daemon/src/ipc/: command_dispatcher.rs  mod.rs  server.rs
rust/tp-daemon/src/pairing/: mod.rs  orchestrator.rs  pending_pairing.rs  random_pairing_bundle.rs
rust/tp-daemon/src/push/: mod.rs  notifier.rs
rust/tp-daemon/src/session/: manager.rs  mod.rs
rust/tp-daemon/src/store/: config.rs  mod.rs  pairing_row_guard.rs  schema.rs  session_db.rs  store.rs
rust/tp-daemon/src/transport/: mod.rs  relay_client.rs  relay_manager.rs
rust/tp-daemon/src/worktree/: manager.rs  mod.rs
rust/tp-e2e-holder/: Cargo.toml
rust/tp-e2e-holder/src/: claude.rs  db.rs  envcfg.rs  ipc.rs  main.rs  out.rs  push.rs  relay.rs  spawn.rs
rust/tp-loopback/: Cargo.toml
rust/tp-loopback/src/: main.rs
rust/tp-proto/: Cargo.toml
rust/tp-proto/src/: control.rs  ipc.rs  keypair.rs  label.rs  lib.rs  locate.rs  relay_client.rs  socket_path.rs
rust/tp-proto/tests/: message_vectors.rs
rust/tp-proto/tests/fixtures/: message-vectors.json
rust/tp-relay/: Cargo.toml  build.rs
rust/tp-relay/src/: apns.rs  apns_jwt.rs  conn.rs  handshake.rs  http.rs  lib.rs  main.rs  messages.rs  metrics.rs  push.rs  push_seal.rs  rate.rs  registry.rs  resume_token.rs  ring.rs  server.rs
rust/tp-relay/tests/: http_surface.rs  resume_token_vectors.rs  server_integration.rs  server_message_vectors.rs  soak_10k.rs
rust/tp-runner/: Cargo.toml
rust/tp-runner/src/: cli.rs  collector.rs  hooks.rs  ipc.rs  lib.rs  main.rs  pty.rs  runner.rs  settings.rs  socket.rs  wire.rs
rust/tp-runner/tests/: run_e2e.rs  run_e2e_signal.rs
scripts/: asc-jwt.py  build-bundle.sh  build.ts  cleanup-worktree-processes.sh  codemod-ts4111.ts  deploy-relay.sh  dev-pair.ts  doctor-throttle-e2e.ts  gen-message-vectors.ts  gen-wire-vectors.ts  inject-theme-bootstrap.ts  install.ps1  install.sh  ios-dev-build.sh  ios.sh  local-relay-loopback.ts  real-daemon-pair.ts  relay-harden.sh  runner-parity-real-claude.ts  rust-pair-new-e2e.ts  rust-relay-e2e.ts  setup-testflight-secrets.sh  setup-worktree.sh  soak.ts
spike/: 01-bun-pty.ts  02-bun-pty-interactive.ts  03-hooks-capture.ts  04-hooks-via-settings.ts
(+429 files in other folders)
