# Cargo workspace for the Teleprompter Rust core (ADR-0001 Phase 2).
#
# `tp-core` holds the byte-exact, transport-agnostic primitives that the wire
# protocol depends on — framed-JSON codec, E2EE crypto (X25519 crypto_kx +
# XChaCha20-Poly1305-IETF), the BLAKE2b KDF/ratchet, and QR pairing
# encode/decode. These are pure functions: same inputs → same bytes as the
# reference TypeScript implementation in packages/protocol. The Swift app links
# them through a UniFFI-generated FFI (see rust/README.md).
[workspace]
resolver = "2"
members = ["tp-core", "tp-proto", "tp-relay", "tp-cli", "tp-runner", "tp-daemon"]

[workspace.package]
edition = "2021"
# MSRV — keep in step with rust/rust-toolchain.toml. Declaring it makes a build
# on an older compiler fail with a clear message instead of a cryptic error.
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/DaveDev42/teleprompter"

# Workspace-wide lint policy, inherited by each crate via `[lints] workspace =
# true`. The default clippy set is clean at HEAD, so `clippy::all = "deny"` is a
# hard gate from day one; `clippy::pedantic = "warn"` surfaces the stricter
# suggestions without blocking (ratchet to "deny" later, wave by wave).
# `unsafe_code = "forbid"` makes the all-safe-code invariant compiler-enforced —
# a contributor cannot silently add `unsafe` (verified: both crates build clean
# under it, incl. uniffi 0.28 scaffolding).
[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"

# Smaller, faster release artifacts for the xcframework we ship into the app.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
