[package]
name = "tp-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust `tp` CLI (ADR-0003 full-CLI port). Subcommand router + read-only commands first; retires the Bun CLI as commands land. Talks ONLY to the daemon IPC socket (never a relay WS — CLI-has-no-RelayClient invariant)."

# The single user-facing binary. Installed at ~/.local/bin/tp (dogfood) and,
# once the port is complete, shipped as the release `tp` (brew/curl).
[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
# Subcommand router + flag parsing. derive keeps the command tree declarative and
# the --help output close to the Bun CLI's hand-rolled help. clap 4 resolves on
# Rust 1.96 (MSRV pinned in rust-toolchain.toml).
clap = { version = "4", features = ["derive"] }
# Read the daemon's SQLite store directly for the daemon-less read-only commands
# (status / session list / pair list / logs). `bundled` compiles a known-good
# SQLite (no system libsqlite dependency, reproducible across CI/dogfood). The
# CLI opens these DBs READ-ONLY with PRAGMA busy_timeout to coexist with the live
# daemon writer (WAL). WRITES go through daemon IPC, never direct SQLite — the
# daemon is the single writer (ADR-0003 Amendment 2 A2.4 decision).
rusqlite = { version = "0.32", features = ["bundled"] }
# Minimal JSON parsing for `tp logs` event records (event.hook_event_name,
# event.last_assistant_message, event.tool_name). No derive needed — we access
# fields via Value indexing, keeping the dep surface small.
serde_json = { version = "1", default-features = false, features = ["std"] }
# Safe (no `unsafe` in our code — `unsafe_code = "forbid"` at the workspace
# level) wrapper for `getuid()`. The uid must byte-match the daemon's
# `process.getuid()` because it indexes `/run/user/<uid>` and
# `/tmp/teleprompter-<uid>` in the socket-path derivation — a heuristic (e.g.
# HOME's owner) could drift. `process` is the only feature we need.
rustix = { version = "1.1", features = ["process"] }
# IPC message types + parse_ipc_message — byte-exact port of parseIpcMessage
# (packages/protocol/src/ipc-guard.ts). The CLI uses the typed IpcMessage enum
# for serialising requests and deserialising daemon replies without re-defining
# the wire shapes here. serde_json is already in tp-proto's dep tree; the
# feature flags above (std, no alloc) are inherited transparently.
tp-proto = { path = "../tp-proto" }
# E2EE crypto primitives for the Rust-native doctor self-test: kx_seed_keypair,
# kx_server_session_keys, kx_client_session_keys, seal, open.  tp-core exposes
# `crate-type = ["lib", ...]` so it is usable as a plain Rust dep (no FFI needed
# here — UniFFI is an additional export layer on top of the same public fns).
tp-core = { path = "../tp-core" }
# Random nonce generation for the doctor E2EE self-test.  tp-core's `seal()`
# requires the caller to supply the 24-byte nonce (the TS `encrypt()` generates
# it internally via libsodium randomBytes).  We use OsRng here — the `getrandom`
# feature ensures it works without std-only feature flags on the rand 0.8 line.
rand = { version = "0.8", features = ["getrandom"] }
# Terminal UI helpers for interactive subcommands (`session cleanup`, and later
# `pair new`). We use: raw mode enable/disable, event reading (key events),
# and a handful of ANSI formatting helpers. `events` is the only feature needed
# for blocking key-event reads; the full-featured `crossterm::execute!` macros
# are used for cursor hiding via the `style` feature (transitively pulled in).
crossterm = { version = "0.29", default-features = false, features = ["events"] }
# OSC 52 clipboard payload — STANDARD alphabet base64 (matches Bun
# `Buffer.from(text,"utf8").toString("base64")`, osc52.ts:83). No URL-safe, no
# line wrapping. Used only by `pair new`'s `c`-to-copy path.
base64 = "0.22"
# Half-block terminal QR render for `pair new`. Glyph layout differs from the
# Bun `qrcode-terminal` renderer (accepted — the scanned/copied URL printed
# below is byte-identical; the iOS scanner reads the URL, not the glyphs).
# `default-features = false` drops the `image`/`svg`/`pic` renderers (and the
# heavy `image` crate) — we only use the `render::unicode::Dense1x2` half-block
# string renderer, which is in the core module.
qrcode = { version = "0.14", default-features = false }
# SIGINT handler for the long-lived `pair new` flow: on Ctrl+C we send a framed
# `pair.cancel` (or close the IPC socket pre-begin). No tokio — the rest of the
# CLI is blocking std I/O, so `ctrlc` + a reader thread keeps the runtime surface
# minimal.
ctrlc = "3"
# Host name for `pair new`'s default label (normalizeHostLabel(hostname())).
# A single mature dep is cleaner than rustix's uncertain `system` feature surface
# under `unsafe_code = "forbid"`.
hostname = "0.4"

# NOTE: the pair.lock advisory file lock (`pair_lock.rs`) uses the std
# `File::try_lock` API (stabilized in Rust 1.89, available on our pinned 1.96
# toolchain) — NO external crate. It diverges from the Bun CLI's proper-lockfile
# mkdir-directory lock (the two do NOT mutually exclude cross-implementation);
# accepted because the Bun CLI is being retired and both are not run concurrently
# post-port (see pair_lock.rs module doc).

# HTTPS client for `tp upgrade`: fetches checksums.txt + the release binary from
# GitHub. `blocking` is used because the CLI is a short-lived process with no
# async runtime; `rustls-tls` (NOT `native-tls`) avoids an OpenSSL system
# dependency and keeps the build reproducible across CI, dogfood, and release
# targets. `json` is omitted — we parse with serde_json (already a dep).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
# SHA-256 file-hash for checksum verification in `tp upgrade`. The `sha2` crate
# is the canonical RustCrypto implementation (same ecosystem as the crypto crates
# already in tp-core/tp-relay). No `sha3` or `blake2` alternatives — the
# release checksums.txt uses sha256sum format, matching this digest.
sha2 = "0.11"

[dev-dependencies]
# Hermetic temp directories for completions_install tests. Only used in
# `#[cfg(test)]` — zero production footprint. The `tempfile` crate is the
# Rust-ecosystem standard and is already widely used in Rust tooling.
tempfile = "3"

[lints]
workspace = true
