[package]
name = "tp-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Byte-exact wire primitives (codec, E2EE crypto, pairing) for the Teleprompter native app — UniFFI-exposed."

[lib]
# `cdylib` + `staticlib` so we can link the static archive into the iOS app and
# still build a dylib for host-side bindgen. `lib` keeps it usable as a normal
# Rust dependency (and for the in-crate uniffi-bindgen binary).
crate-type = ["lib", "staticlib", "cdylib"]
name = "tp_core"

[dependencies]
# E2EE: must be byte-identical to libsodium-wrappers on the TS side.
#   - XChaCha20-Poly1305-IETF  (chacha20poly1305::XChaCha20Poly1305)
#   - X25519 + crypto_kx KDF    (x25519-dalek + blake2 BLAKE2b-512 split)
#   - BLAKE2b-256 generichash   (blake2::Blake2b with 32-byte output)
chacha20poly1305 = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake2 = "0.10"
# digest 0.10 traits used to drive blake2 with variable output (Blake2bVar).
digest = "0.11"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
# Secret-material memory hygiene: zero key bytes on drop so derived session keys
# and pairing secrets don't linger in freed heap/stack (recoverable via core dump
# / vm_read). Already in the tree transitively via chacha20poly1305/x25519-dalek;
# pin it directly for the derive macro. Drop-only — no wire/crypto/FFI change.
zeroize = { version = "1", features = ["zeroize_derive"] }

# FFI binding generator. `cli` feature provides the `uniffi_bindgen_main`
# entrypoint used by the in-crate binary (src/bin/uniffi-bindgen.rs).
# Proc-macro mode (`uniffi::setup_scaffolding!()` in lib.rs) needs no build.rs.
uniffi = { version = "0.31", features = ["cli"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
