[package]
name = "tp-daemon"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust daemon store layer (ADR-0003 Phase 4, increment 1). Ports packages/daemon/src/store/*.ts + daemon-lock.ts + export-formatter.ts to Rust on rusqlite (bundled). Opens the SAME on-disk sessions.sqlite / <sid>.sqlite the Bun daemon writes — byte-exact SQL text and PRAGMAs, verified by a differential parity gate. Lib only in increment 1 (no [[bin]], no runtime cutover)."

[lib]
name = "tp_daemon"
path = "src/lib.rs"

# Parity-gate probe ONLY (NOT the shipping daemon binary — that is increment 5).
# A thin CLI over `Store` that lets the bidirectional shared-file parity gate
# (packages/daemon/src/store/store-rust-parity.test.ts) drive the Rust store
# against the same on-disk vault a Bun `Store` uses. Named `tp-daemon-probe`
# (the file basename `probe` would otherwise be the bin name) so the test's
# findProbe() locates rust/target/{release,debug}/tp-daemon-probe.
[[bin]]
name = "tp-daemon-probe"
path = "src/bin/probe.rs"

[dependencies]
# Bundled SQLite (Dave's decision — vendors its own libsqlite3 so the daemon
# never depends on the system's sqlite3 version). "bundled" feature compiles
# the amalgamation from source via the `libsqlite3-sys` build script.
# Pinned to 0.40 (not the brief's suggested 0.37) to match tp-cli's existing
# rusqlite dependency — libsqlite3-sys sets `links = "sqlite3"`, and Cargo
# allows only ONE version of a `links`-declaring crate in the whole dependency
# graph, so tp-daemon and tp-cli must agree exactly or the workspace fails to
# resolve.
rusqlite = { version = "0.40", features = ["bundled"] }
# Row parsing / Label wire-shape decode (tp_proto::decode_wire_label takes a
# serde_json::Value).
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# tp_core::derive_legacy_pairing_id (BLAKE2b → UUIDv8 legacy pairing-id
# backfill) — byte-exact with packages/protocol/src/pairing.ts. Also the IPC
# frame codec (FrameDecoder) — byte-exact with packages/protocol/src/codec.ts,
# reused (not reimplemented) by the ipc::server accept loop.
tp-core = { path = "../tp-core" }
# Label enum + decode_wire_label/label_to_nullable + assert_safe_sid +
# socket_path/resolve_runtime_dir (this increment adds the latter two to
# tp-proto; see src/lib.rs there) + IpcMessage/parse_ipc_message for the IPC
# server's inbound frame decode.
tp-proto = { path = "../tp-proto" }
# Safe (no `unsafe` — workspace forbids it) kill(pid, 0) liveness probe for
# the daemon-lock pidfile singleton, and (this increment) SIGTERM delivery for
# SessionManager::kill_runner (tokio::process::Child has no SIGTERM helper —
# `Child::kill` sends SIGKILL). `process` feature only.
rustix = { version = "1.1", features = ["process"] }
# Async runtime for the IPC listener (tokio::net::UnixListener accept loop,
# same pattern as tp-runner's hooks.rs) and the session-manager's Runner
# process supervision (tokio::process::Command/Child exit-await). Same
# version/features tp-runner pins — do not diverge the workspace's tokio pin.
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "signal", "time", "process", "fs"] }
# Relay-client transport (increment 3): outbound WS client to the relay.
# `RelayServerMessage`/`parse_relay_server_message` (inbound relay→daemon
# frames) already exist in tp-relay (byte-exact port of relay-server-guard.ts)
# — reused here rather than re-derived in tp-proto. tp-relay has no dependency
# back on tp-daemon, so this does not create a workspace cycle.
tp-relay = { path = "../tp-relay" }
# WS client transport, same pin tp-relay's own dev-dependency (and its tests)
# use. `rustls-tls-webpki-roots` so `wss://` (production relay URLs) works
# without depending on the system OpenSSL/native-tls.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
# SinkExt/StreamExt for the WS read/write halves (same pattern tp-relay's
# conn.rs server-side and tp-runner's ipc.rs client-side use).
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# Base64 (STANDARD, padded) for the kx envelope's raw-pubkey field
# (`toBase64`/`fromBase64` in the TS source) — the AEAD seal/open helpers in
# tp-core encode/decode their own base64 internally but do not expose a public
# helper, so this crate needs its own for the non-AEAD raw-bytes field. Same
# major version tp-core/tp-relay already pin.
base64 = "0.22"
# OsRng for the AEAD nonce `tp_core::crypto::seal` requires the caller to
# supply (tp-core has no rand dependency of its own — the caller picks the
# nonce source). Same version/feature pin tp-relay/tp-proto already use for
# the identical purpose (push-seal nonces, ephemeral X25519 keys).
rand_core = { version = "0.6", features = ["getrandom"] }
# Genuinely-random X25519 keypair generation for `PendingPairing::begin()`
# (increment 4). `tp_core::crypto::kx_seed_keypair` is deterministic
# (BLAKE2b-hash-then-basemult over a caller seed) — NOT equivalent to the real
# libsodium `crypto_kx_keypair()` the TS daemon calls (raw random secret bytes,
# no hashing step) that `createPairingBundle` needs. Same major version
# tp-core already pins; `static_secrets` gives us `StaticSecret::random_from_rng`.
# Lib-internal only — no FFI/UniFFI surface change.
x25519-dalek = { version = "2", features = ["static_secrets"] }
# Format a random pairing UUID as hex (random_pairing_bundle). Same version
# tp-core already pins.
hex = "0.4"
# OS hostname for the QR v4 `hostname` field (safe_hostname in
# pairing/orchestrator.rs, mirrors `os.hostname()` in
# pairing-orchestrator.ts). Same version tp-cli already pins.
hostname = "0.4"
# Zeroize the random pairing secret on drop (random_pairing_bundle) — same
# version/feature tp-core/tp-proto already pin.
zeroize = { version = "1", features = ["zeroize_derive"] }
# `BeginPairingError` (pairing/orchestrator.rs) wire-reason enum with a
# Display impl. Same major version tp-core already pins.
thiserror = "2"

[dev-dependencies]
# Hermetic temp dirs for store/session-db/daemon-lock tests.
tempfile = "3"

[lints]
workspace = true
