[package]
name = "tp-proto"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stage 0 message-type parity: serde enums + parse-boundary equivalents (parseRelayClientMessage/parseIpcMessage/parseControlMessage) + lenient Label decoder + random keypair. No runtime cutover — golden-vector parity only (ADR-0003)."

[lib]
name = "tp_proto"
# Plain rlib only. NOT staticlib/cdylib — this crate is host-only at Stage 0
# (no UniFFI, not in the xcframework). Add crate-types later if/when it ships.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Random keypair generation (the one new primitive vs tp-core's deterministic
# kx_seed_keypair). x25519-dalek's StaticSecret builds from an OsRng. rand_core
# 0.6 is what x25519-dalek v2 pins; depend on it directly so OsRng is in scope.
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
serde_json = "1"
