[package]
name = "tp-relay"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Stage 1 relay server — RelayServerMessage serde core + framing helpers + handshake/registry/resume-token logic (Step 3). No axum/tokio yet (Step 4+)."

[lib]
name = "tp_relay"
# Plain rlib only. NOT staticlib/cdylib — host-only, no UniFFI.

[dependencies]
tp-proto = { path = "../tp-proto" }
tp-core = { path = "../tp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# BLAKE2b keyed-hash for resume tokens — same version tp-core already pins.
blake2 = "0.10"
# base64url encoding for resume token wire format.
base64 = "0.22"
# Random secret generation (ephemeral fallback when env secret absent/short).
rand_core = { version = "0.6", features = ["getrandom"] }
# IndexMap for insertion-ordered session set (BTreeSet loses insertion order).
indexmap = "2"
# Atomic version-mismatch counter in handshake.rs.
# (std::sync::atomic suffices; no extra dep needed)

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
