[package]
name = "tp-relay"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Stage 1 relay server — RelayServerMessage serde core + framing helpers + handshake/registry/resume-token logic + async axum/tokio WebSocket hot path (Step 4)."

[lib]
name = "tp_relay"
# Plain rlib only. NOT staticlib/cdylib — host-only, no UniFFI.

[dependencies]
tp-proto = { path = "../tp-proto" }
tp-core = { path = "../tp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# BLAKE2b keyed-hash for resume tokens AND the /admin bearer compare (folds a
# variable-length token into a fixed 32-byte digest so the compare is
# length-independent) — same version tp-core already pins.
blake2 = "0.10"
# base64url encoding for resume token wire format.
base64 = "0.22"
# Random secret generation (ephemeral resume-secret fallback when env secret
# absent/short, plus the per-process /admin bearer-hash key in http.rs).
rand_core = { version = "0.6", features = ["getrandom"] }
# IndexMap for insertion-ordered session set (BTreeSet loses insertion order).
indexmap = "2"
# GCRA rate limiter (replaces the TS fixed-window — no 2x burst at the window
# boundary). Per-client + per-daemon-group direct limiters.
governor = "0.10"
# Atomic version-mismatch counter in handshake.rs.
# (std::sync::atomic suffices; no extra dep needed)
# ── Step 4: async WebSocket hot path ──────────────────────────────────────────
# Tokio multi-thread runtime + timers (idle/auth Interval) + bounded mpsc
# (per-conn outbox backpressure) + net (loopback TcpListener for integration).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# axum WebSocket server — the single GET "/" upgrade route. 0.7 resolves cleanly
# on Rust 1.96 (0.8 pulls a newer matchit/hyper that bumps MSRV above 1.96).
axum = { version = "0.7", features = ["ws"] }
# StreamExt/SinkExt for splitting the axum ws into read/write halves.
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# Constant-time byte compare for the /admin bearer token (no timing side-channel
# leaking the token). Already in the tree transitively (p256/elliptic-curve);
# declared explicitly here for the `ConstantTimeEq` import in http.rs.
subtle = { version = "2", default-features = false }

# ── Step 5: push path ─────────────────────────────────────────────────────────
# P-256 ECDSA for APNs JWT (ES256). We need:
#   - `ecdsa`  → signing + verifying
#   - `pkcs8`  → parse PKCS#8 PEM (.p8 key from Apple) via
#                `p256::ecdsa::SigningKey::from_pkcs8_pem`
#   - `pem`    → enables PEM reading (re-exports elliptic-curve/pem + ecdsa-core/pem)
# sha256 is a transitive feature of `ecdsa` — p256 0.13.2 includes the sha2
# backend when `ecdsa` is requested.
# Signature::to_bytes() / Signature::to_vec() yields the fixed 64-byte IEEE P1363
# (r‖s) representation used directly as the JWT signature bytes.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
# HTTP/2 + rustls-TLS client for APNs push POSTs. reqwest 0.13 uses hyper 1.x
# + h2 0.4; all have MSRV 1.63 — safely below our 1.96.
# We set default-features=false and opt-in to exactly what we need:
#   http2       — h2 feature gate (HTTP/2 framing via hyper)
#   rustls-tls  — TLS via rustls (no openssl/native-tls dependency)
#   json        — serde_json request/response body helpers
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls", "json"] }

[dev-dependencies]
serde_json = "1"
# Integration-test WebSocket CLIENT only (the server uses axum's ws). Drives a
# real loopback handshake/pub-sub/kx round-trip against the live RelayServer.
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
futures-util = "0.3"
# Drive the axum Router directly (oneshot) for the /health + /metrics + /admin
# HTTP surface tests without binding a TCP listener. `tower` is already an axum
# dependency; `http-body-util` collects the response body to bytes.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
